Aggressive memory footprint reduction